# imageViewer

./: .gitignore  app.py  docs.txt  g.xd  lolImage.py  main.py  model.py  pyproject.toml  test.py  test1.py  test2.py  view.py  viewWx.py
LOLview/: app.py  lolImage.py  model.py  timer.py  view.py
_old/: controller.py  tk.py  wxApp.py
