[tool.poetry]
name = "LOLview"
version = "0.1.0"
description = ""
authors = ["mschumburg <marcel.schumburg@fh-bielefeld.de>"]

[tool.poetry.dependencies]
python = "^3.6"
wxpython = "^4.1.0"
rawpy = "^0.15.0"
exifread = "^2.3.1"
pillow = "^7.2.0"
exif = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
